2002-03-20  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (solver_results_init): Bug fix: Allocate using total #
	of constructors.

	* api.c (w_lp_solve_set_option): Added max iteration setting.

2002-03-19  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* api.[ch], reports.c, solver.c : Started the implementation of QP
	program reporting.

2002-03-18  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c, solver.c, reports-write.c: More clean up.

	* reports.c, solver.c, reports-write.c: Made find_name static.

	* reports-write.[ch]: Created.  reports-write.c should contain
	writing only.  The logic will move into reports.c.

	* reports.c: Moved lots of stuff to reports-write.c.

	* solver.c: Started adding support for QP.

2002-03-17  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c, reporst.c: Started adding allowable changes for
	constraints in the sensitivity report.

	* reports.c, solver.c, api.c: Implemented support for bool constraints.

	* solver.c, api.c : Implemented the support for non-negativity
	assumption button.  Should be now fully working with both LP Solve
	and GLPK Simplex.
	
	* solver.c, api.c: Api changes.  Added print LP function for debugging.

2002-03-16  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (solver): Fix crash with INT constraints.

	* reports.c: Fixed reporting with INT constraints.

	* solver.c (get_col_nbr): New function.
	(lp_solver_init): Fixed the `Int' constraints.

	* api.c (w_glpk_init): Killed a warning.
	(w_lp_solve_set_int): Fixed the column indexing.

	* api.c, solver.c: Completed the support for GLPK's two phase
	primal simplex method.

	* api.c: Added support for automatic scaling and non-negativity
	assumption options.  Framwork for max iterations and max time
	options added too.

2002-03-15  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (lp_solver_init): Added a check that at least one of
	the obj. fn coefficents should be != 0.