@@ -316,7 +316,7 @@ w_lp_solve_set_option (SolverProgram program, SolverOptionType option,
 	        lp_solve_set_max_iter (lp->p, *i_value);
 	        return FALSE;
 	case SolverOptMaxTimeSec:
-printf("FIXME: Max time (sec.)=%d\n", *i_value);
+	        lp_solve_set_max_time (lp->p, *i_value, *f_value);
 	        return FALSE;
 	default:
 	        return TRUE;
